contrast issues

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 	box-sizing: border-box;
 	font-family: Fira Sans;
 }
+body{
+	margin-left: 0;
+	background-color: #EBFCF8;
+}
 #top{
 	box-sizing: border-box;
 	position: fixed;
@@ -71,14 +75,24 @@ h1{
 	margin-left: 25%;
 }
 span{
-	font-weight: 600;
-	color: #01BDF0;
+	font-size: 32px;
+	font-weight: 700;
+	text-shadow: 3px 3px 5px gray;
+	color: #1A28EB;
 }
-h3{	
+h2{	
 	text-align: center;
 	color: black;
 	text-shadow: 1px 1px gray;
 	font-size: 50px;
+	width: 100%;
+	height: 25%;
+}
+h3{
+	text-align: center;
+	color: black;
+	text-shadow: 1px 1px gray;
+	font-size: 45px;
 	width: 100%;
 	height: 25%;
 }
@@ -118,7 +132,8 @@ p{
 	color: black;
 }
 .greeting{
-	font-weight: 600;
+	font-size: 32px;
+	font-weight: 700;
 }
 li{
 	text-align: center;
